--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -13,20 +13,24 @@
 	transition: .2s linear;
 }	
 
+#uix-page-builder-themepreview.active {
+	left: 0;
+	width: 100vw;
+}
+
+
 .uix-page-builder-themepreview-btn {
 	-webkit-box-shadow: 0px 2px 23px 1px rgba(0,0,0,0.24);
 	-moz-box-shadow: 0px 2px 23px 1px rgba(0,0,0,0.24);
 	box-shadow: 0px 2px 23px 1px rgba(0,0,0,0.24);
     background: #fff;
-    width: 52px;
-    height: 52px;
+    width: 32px;
+    height: 32px;
+	line-height: 27px;
     display: inline-block;
     text-align: center;
-    line-height: 52px;
     position: fixed;
     left: 315px;
-    top: 0;
-	z-index: 1;
     border: none;
     outline: none;
     text-decoration: none;
@@ -37,6 +41,32 @@
 	-o-transition: .2s linear;
 	-webkit-transition: .2s linear; 
 	transition: .2s linear;
+	top: 49%;
+	margin-left: -17px;
+	z-index: 2;
+	-webkit-border-radius: 100%; 
+	-moz-border-radius: 100%; 
+	border-radius: 100%; 
+}
+
+.uix-page-builder-themepreview-btn.active {
+	left: 0;
+	filter: alpha(opacity=35);
+	-moz-opacity: 0.35;   
+	opacity: 0.35; 
+}
+
+.uix-page-builder-themepreview-btn.active:hover {
+	filter: alpha(opacity=100);
+	-moz-opacity: 1;   
+	opacity: 1; 	
+}
+
+
+
+.uix-page-builder-themepreview-btn .dashicons {
+	vertical-align: middle;
+	font-size: 22px;
 }
 
 .uix-page-builder-themepreview-btn:focus {
@@ -46,48 +76,13 @@
 	box-shadow: 0px 2px 23px 1px rgba(0,0,0,0.24);
 }
 
-.uix-page-builder-themepreview-btn.reverse {
+.uix-page-builder-themepreview-btn.active {
 	-webkit-transform: rotate(180deg);
 	-ms-transform: rotate(180deg);
 	transform: rotate(180deg);
+	margin-left: -10px;
 }
 
-.uix-page-builder-themepreview-btn:hover:after {
-    background: #333;
-    background: rgba(0,0,0,.8);
-	-webkit-border-radius: 2px; 
-	-moz-border-radius: 2px; 
-	border-radius: 2px;
-    color: #fff;
-    content: attr(title);
-    left: 60px;
-	margin-top: 10px;
-    padding: 7px 7px;
-    position: absolute;
-    min-width: 120px;
-	line-height: 1.2;
-	font-weight: normal;
-	font-style: normal;
-	font-size: 12px;
-	font-family: Verdana, "sans-serif";
-}
-.uix-page-builder-themepreview-btn:hover:before {
-	width: 0; 
-	height: 0; 
-	border-top: 6px solid transparent;
-	border-bottom: 6px solid transparent; 
-	border-right: 6px solid #333; 
-    content: "";
-    top: 17px;
-	left: 24px;
-	margin-left: 30px;
-    position: absolute;
-    z-index: 99;
-}
-
-.uix-page-builder-themepreview-btn#uix-page-builder-themepreview-btn-close {
-	top: 52px;
-}
 
 .uix-page-builder-themepreview-btn:hover {
     background: #F1F1F1;
@@ -100,7 +95,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-	z-index: 6;
+	z-index: 23;
 	background: rgba(255,255,255,.85);
 	text-align: center;
 }
@@ -112,7 +107,7 @@
 	top: 50%;
 	left: 50%;
 	margin: -25px 0 0 -25px;
-	z-index: 7;
+	z-index: 24;
 	-webkit-border-radius: 100%; 
 	-moz-border-radius: 100%;
 	border-radius: 100%;
@@ -336,6 +331,15 @@
 	box-shadow: 12px 0px 37px -5px rgba(0,0,0,0.24);
 	overflow: hidden;
 	overflow-y: auto;
+	padding: 30px 0;
+}
+
+#uix-page-builder-gridster-wrapper.visualBuilder .uix-page-builder-gridster {
+	padding-bottom: 50px;
+}
+
+#uix-page-builder-gridster-wrapper.visualBuilder.active {
+	margin-left: -315px;
 }
 
 
@@ -343,18 +347,168 @@
 	width: 315px;
 }
 
-#uix-page-builder-gridster-wrapper.visualBuilder .uix-page-builder-gridster-addbtn {
-	padding-top: 10px;
+.uix-page-builder-gridster-addbtn.visualBuilder {
+	position: fixed;
+	left: 18px;
+	top: 10px;
+	z-index: 22;
+	width: 315px;
+	margin: 0;
+	-moz-transition: .2s linear; 
+	-o-transition: .2s linear;
+	-webkit-transition: .2s linear; 
+	transition: .2s linear;	
 }
 
-#uix-page-builder-gridster-wrapper.visualBuilder .uix-page-builder-gridster-addbtn .button {
-	width: 275px;
+.uix-page-builder-gridster-addbtn.visualBuilder.active {
+	filter: alpha(opacity=35);
+	-moz-opacity: 0.35;   
+	opacity: 0.35; 
+}
+
+.uix-page-builder-gridster-addbtn.visualBuilder.active:hover {
+	filter: alpha(opacity=100);
+	-moz-opacity: 1;   
+	opacity: 1; 	
+}
+
+.uix-page-builder-gridster-addbtn.visualBuilder .button:not(.button-primary) {
+	width: 52px;
+	height: 52px;
+	line-height: 52px;
 	margin-bottom: 5px;
+	background: #333 !important;
+	color: rgba(181,181,181,1.00) !important;	
+	-webkit-box-shadow: 0px 0px 46px 0px rgba(0,0,0,0.23) !important;
+	-moz-box-shadow: 0px 0px 46px 0px rgba(0,0,0,0.23) !important;
+	box-shadow: 0px 0px 46px 0px rgba(0,0,0,0.23) !important;
+	border-color: #000 !important;
+	text-shadow: none !important;
+	font-size: 0;
 }
 
+
+.uix-page-builder-gridster-addbtn.visualBuilder .button:not(.button-primary):hover:after {
+    background: #333;
+    background: rgba(0,0,0,.8);
+	-webkit-border-radius: 2px; 
+	-moz-border-radius: 2px; 
+	border-radius: 2px;
+    color: #fff;
+    content: attr(title);
+    left: 0;
+	margin-top: 60px;
+    padding: 7px 7px;
+    position: absolute;
+    min-width: 100px;
+	line-height: 1.2;
+	font-weight: normal;
+	font-style: normal;
+	font-size: 11px;
+	font-family: Verdana, "sans-serif";
+	text-align: center;
+}
+.uix-page-builder-gridster-addbtn.visualBuilder .button:not(.button-primary):hover:before {
+	width: 0; 
+	height: 0; 
+	border-left: 6px solid transparent;
+	border-top: 6px solid transparent; 
+	border-right: 6px solid #333; 
+    content: "";
+    top: 55px;
+	left: 48%;
+    position: absolute;
+    z-index: 22;
+}
+
+
+
+.uix-page-builder-gridster-addbtn.visualBuilder .button:not(.button-primary):active {
+	-webkit-transform: translateY(0);
+	-ms-transform: translateY(0);
+	transform: translateY(0);
+}
+
+.uix-page-builder-gridster-addbtn.visualBuilder .li {
+	margin-left: -2px;
+}
+
+
+.uix-page-builder-gridster-addbtn.visualBuilder .button:not(.button-primary).select-temp,
+.uix-page-builder-gridster-addbtn.visualBuilder .button:not(.button-primary).save-temp,
+.uix-page-builder-gridster-addbtn.visualBuilder .button:not(.button-primary).export-temp {
+	-webkit-border-radius: 0; 
+	-moz-border-radius: 0; 
+	border-radius: 0;
+	margin-left: -2px;
+	margin-right: 0;
+}
+
+.uix-page-builder-gridster-addbtn.visualBuilder .button:not(.button-primary).save-temp {
+	margin-left: -1px;
+}
+
+.uix-page-builder-gridster-addbtn.visualBuilder .button:not(.button-primary).add {
+	-webkit-border-top-right-radius: 0; 
+	-moz-border-top-right-radius: 0; 
+	border-top-right-radius: 0;
+	-webkit-border-bottom-right-radius: 0; 
+	-moz-border-bottom-right-radius: 0; 
+	border-bottom-right-radius: 0;
+	margin-right: 0;
+}
+
+.uix-page-builder-gridster-addbtn.visualBuilder .button:not(.button-primary).exit-visual-builder {
+	-webkit-border-top-left-radius: 0; 
+	-moz-border-top-left-radius: 0; 
+	border-top-left-radius: 0;
+	-webkit-border-bottom-left-radius: 0; 
+	-moz-border-bottom-left-radius: 0; 
+	border-bottom-left-radius: 0;
+	margin-left: -2px;
+	background: #D8181C !important;
+	color: #fff !important;
+	-webkit-box-shadow: 0px 0px 46px 0px rgba(180,2,5,0.23) !important;
+	-moz-box-shadow: 0px 0px 46px 0px rgba(180,2,5,0.23) !important;
+	box-shadow: 0px 0px 46px 0px rgba(180,2,5,0.23) !important;
+	border: 1px solid rgba(155,5,8,1.00) !important;
+}
+
+
+.uix-page-builder-gridster-addbtn.visualBuilder .button:not(.button-primary):hover {
+	background: #000 !important;
+}
+
+.uix-page-builder-gridster-addbtn.visualBuilder .button:not(.button-primary).exit-visual-builder:hover {
+	background: rgba(188,24,27,1.00) !important;
+}
+
+.uix-page-builder-gridster-addbtn.visualBuilder .button:not(.button-primary).add {
+	color: #fff !important;
+	font-weight: 600;
+}
+
+
+.uix-page-builder-gridster-addbtn.visualBuilder .button:not(.button-primary) .dashicons {
+	color: rgba(127,127,127,1.00);
+	font-size: 22px;
+	margin-left: 5px;
+	vertical-align: middle;
+	
+}
+
+.uix-page-builder-gridster-addbtn.visualBuilder .button:not(.button-primary).add .dashicons,
+.uix-page-builder-gridster-addbtn.visualBuilder .button:not(.button-primary).exit-visual-builder .dashicons {
+	color: #fff;
+}
 
 #uix-page-builder-layoutdata-none {
 	padding: 20px;
+}
+
+#uix-page-builder-gridster-wrapper.visualBuilder #uix-page-builder-layoutdata-none {
+	padding: 30px 20px 20px;
+	display: block;
 }
 
 
@@ -423,6 +577,8 @@
 
 #uix-page-builder-gridster-wrapper.visualBuilder .uix-page-builder-gridster-widget .title-box {
 	width: 100px;
+	font-size: 12px;
+	text-indent: 3px;
 }
 
 .uix-page-builder-gridster-widget.active .title-box {
@@ -540,6 +696,13 @@
 	margin-left: 5px;
 	vertical-align: bottom;
 }
+
+.uix-page-builder-gridster-addbtn a:not(.add):not(.visual-builder) .dashicons {
+	font-size: 13px;
+	line-height: 16px;
+}
+
+
 
 .uix-page-builder-gridster-addbtn a.add {
 	background: #7AD03A !important;
@@ -970,10 +1133,7 @@
 	top: 0;
 	position: fixed;
 	width: 260px;
-}
-
-#uix-page-builder-gridster-wrapper.visualBuilder .settings-temp-wrapper .button {
-	width: auto;
+	min-height: 152px;
 }
 
 .settings-temp-wrapper strong {
