--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -331,7 +331,7 @@
 	box-shadow: 12px 0px 37px -5px rgba(0,0,0,0.24);
 	overflow: hidden;
 	overflow-y: auto;
-	padding: 30px 0;
+	padding-top: 50px;
 }
 
 #uix-page-builder-gridster-wrapper.visualBuilder .uix-page-builder-gridster {
@@ -603,6 +603,7 @@
 	position: absolute;
 	right: 40px;
 	top: -1px;
+	margin-top: -30px;
 	z-index: 22;
 
 }
@@ -702,9 +703,19 @@
 	line-height: 16px;
 }
 
+.uix-page-builder-visual-mode.side {
+	width: 100%;
+	text-align: center;
+}
 
+.uix-page-builder-visual-mode.side .dashicons {
+	vertical-align: middle;
+	font-size: 18px;
+	margin-right: 5px;
+}
 
-.uix-page-builder-gridster-addbtn a.add {
+.uix-page-builder-gridster-addbtn a.add,
+.uix-page-builder-visual-mode.side {
 	background: #7AD03A !important;
 	border-color: #5EB83C !important;
 	color: #fff !important;
@@ -726,14 +737,18 @@
 
 /* Drag Area*/
 .uix-page-builder-gridster-drag {
-	border-bottom: 1px solid #DADADA;
 	background: #fff;
 	height: 30px;
 	width: 100%;
 	position: absolute;
-	top: 0;
-	left: 0;
+	top: -30px;
+	left: -1px;
 	cursor: move;
+	border: 1px solid #E1E1E1;
+	padding: 0 1px;
+	-webkit-box-shadow: 0px 3px 3px 0px rgba(230,230,230,1);
+	-moz-box-shadow: 0px 3px 3px 0px rgba(230,230,230,1);
+	box-shadow: 0px 3px 3px 0px rgba(230,230,230,1);	
 }
 
 .uix-page-builder-gridster-drag .dashicons-sort {
@@ -771,6 +786,7 @@
 	cursor: pointer;
 	display: block;
 	background: none;
+	margin-top: -30px;
 	
 }
 
@@ -819,6 +835,7 @@
 
 /* Primary Module Buttons
 -------------------------------------------------------------- */
+
 .sortable-list .row .widget-items-container {
 	padding: 8px;
 }
@@ -890,22 +907,19 @@
 -------------------------------------------------------------- */
 /* Column Item */
 .sortable-list-container {
-	margin-top: 50px;
+	margin-top: 0;
 }
 
-.sortable-list {
-	margin-top: 40px;
-}
 
 .sortable-list .row {
 	position: relative;
 	display: block;
 	float: left;
-	height: 40px;
+	height: 45px;
 	background: #FFE7E7;
 	border: 3px dotted #F79EA0;
-	margin-top: -20px;
 	margin-right: 10px;
+	margin-bottom: 13px;
 	cursor: move;
 	
 }
@@ -974,7 +988,6 @@
 #uix-page-builder-gridster-wrapper.visualBuilder .sortable-list .row {
 	width: 100%;
 	float: none;
-	margin-top: 3px;
 	margin-right: 0;
 }
 
@@ -984,17 +997,16 @@
 	width: 400px;
 	height: 50px;
 	position: relative;
-	z-index: 21;
-	
+	z-index: 21;	
 }
 
 .widget-items-col-container .btnlist {
 	width: 400px;
 	height: 50px;
 	position: absolute;
-	top: 30px;
+	top: 0;
 	background: #fff;
-	left: 80px;
+	left: 0;
 	display: none;
 	padding: 0 0;
 	border: 1px solid #F1F1F1;
@@ -1006,7 +1018,6 @@
 }
 
 .widget-items-col-container button {
-	margin-top: 40px;
 	display: inline-block;
 	margin-right: 12px;
 	background: rgba(122, 208, 58, 1);
@@ -1029,14 +1040,34 @@
 	margin-right: 10px;
 }
 
+.widget-items-col-container span.add {
+	display: inline-block;
+	width: 104px;
+	height: 38px;
+	background:url(../uixpbform/images/layout-icon.png) no-repeat top center;
+}
+
 .widget-items-col-container:hover .btnlist {
 	display: block;
 }
 
+
+#uix-page-builder-gridster-wrapper.visualBuilder .widget-items-col-container .btnlist {
+	width: 285px;
+	background: none;
+	border: none;
+	-webkit-box-shadow: none;
+	-moz-box-shadow: none;
+	box-shadow: none;
+	top: -1px;
+}
+
+
 #uix-page-builder-gridster-wrapper.visualBuilder .widget-items-col-container:hover .btnlist {
-	width: 150px;
-	height: 144px;
-	padding-top: 5px;
+	width: 255px;
+	height: 44px;
+	padding-left: 7px;
+	left: -11px;
 }
 
 .widget-items-col-container:hover .btnlist a:active {
@@ -1047,11 +1078,27 @@
 }
 
 .widget-items-col:hover {
-	filter: alpha(opacity=80);  
-	-moz-opacity: 0.8;   
-	opacity: 0.8; 
+	filter: alpha(opacity=70);  
+	-moz-opacity: 0.7;   
+	opacity: 0.7; 
 }
 
+#uix-page-builder-gridster-wrapper.visualBuilder .widget-items-col {
+	display: inline-block;
+	width: 27px;
+	height: 27px;
+	background: #F1F1F1;
+	padding: 1px;
+}
+
+#uix-page-builder-gridster-wrapper.visualBuilder .widget-items-col:hover {
+	filter: alpha(opacity=100);  
+	-moz-opacity: 1;   
+	opacity: 1;
+	-webkit-transform: scale(1.15);   
+	-ms-transform: scale(1.15); 
+	transform: scale(1.15); 
+}
 
 
 .widget-items-col:before{
@@ -1060,9 +1107,15 @@
 	height: 50px;
 }
 
+
 #uix-page-builder-gridster-wrapper.visualBuilder .widget-items-col:before{
-	margin-top: -5px;
+	width: 27px;
+	height: 27px;
+	-webkit-background-size: cover !important;
+	-moz-background-size: cover !important;
+	background-size: cover !important;
 }
+
 
 .widget-items-col-average-4:before{
 	content:' ';
@@ -1104,6 +1157,37 @@
 }
 
 
+#uix-page-builder-gridster-wrapper.visualBuilder .widget-items-col-average-4:before{
+	background-image: url(../uixpbform/images/column-style3/average-4.png);
+}
+
+#uix-page-builder-gridster-wrapper.visualBuilder .widget-items-col-average-3:before{
+	background-image: url(../uixpbform/images/column-style3/average-3.png);
+}
+#uix-page-builder-gridster-wrapper.visualBuilder .widget-items-col-average-2:before{
+	background-image: url(../uixpbform/images/column-style3/average-2.png);
+}
+
+#uix-page-builder-gridster-wrapper.visualBuilder .widget-items-col-average-1:before{
+	background-image: url(../uixpbform/images/column-style3/average-1.png);
+}
+
+#uix-page-builder-gridster-wrapper.visualBuilder .widget-items-col-1_3:before{
+	background-image: url(../uixpbform/images/column-style3/1_3-2_3.png);
+}
+
+#uix-page-builder-gridster-wrapper.visualBuilder .widget-items-col-2_3:before{
+	background-image: url(../uixpbform/images/column-style3/2_3-1_3.png);
+}
+
+#uix-page-builder-gridster-wrapper.visualBuilder .widget-items-col-1_4:before{
+	background-image: url(../uixpbform/images/column-style3/1_4-3_4.png);
+}
+
+#uix-page-builder-gridster-wrapper.visualBuilder .widget-items-col-3_4:before{
+	background-image: url(../uixpbform/images/column-style3/3_4-1_4.png);
+}
+
 
 /* Save Templates
 -------------------------------------------------------------- */
@@ -1116,7 +1200,7 @@
 	border: 1px solid #EBEBEB;
 	width: 315px;
 	padding: 10px;
-	display: non;
+	display: none;
 	position: absolute;
 	top: -1px;
 	z-index: 100049;
