--- a/admin/css/jquery.gridster.css
+++ b/admin/css/jquery.gridster.css
@@ -1,4 +1,11 @@
-/*! gridster.js - v0.5.6 - 2014-09-25 - * http://gridster.net/ - Copyright (c) 2014 ducksboard; Licensed MIT */ 
+/*! 
+* gridster.js 
+*
+* Version: 0.5.7 (2017-01-25)
+* Based https://github.com/ducksboard/gridster.js
+* Licensed under the MIT licenses.
+*/
+
 .gridster {
     position: relative;
 }
