--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -361,7 +361,7 @@
 .uix-page-builder-gridster-addbtn.visualBuilder {
 	position: fixed;
 	left: 18px;
-	top: 10px;
+	top: 0;
 	z-index: 22;
 	width: 260px;
 	height: 53px;
@@ -373,6 +373,9 @@
 	-webkit-box-shadow: 0px 3px 27px -1px rgba(0,0,0,0.41);
 	-moz-box-shadow: 0px 3px 27px -1px rgba(0,0,0,0.41);
 	box-shadow: 0px 3px 27px -1px rgba(0,0,0,0.41);
+	background: #fff;
+	padding-top: 10px;
+	padding-left: 3px;
 }
 
 .uix-page-builder-gridster-addbtn.visualBuilder.active {
@@ -531,8 +534,8 @@
 
 
 .uix-page-builder-gridster {
-	padding: 20px 0;
 	margin-bottom: 20px;
+	margin-top: 30px;
 }
 
 
@@ -545,7 +548,6 @@
 .uix-page-builder-gridster-widget {
 	background-color: #F1F1F1;
 	position: relative;
-	padding: 15px;
 	-webkit-box-shadow: 0 10px 20px rgba(0,0,0,.06),0 6px 6px rgba(0,0,0,.1);
 	-moz-box-shadow: 0 10px 20px rgba(0,0,0,.06),0 6px 6px rgba(0,0,0,.1);
 	box-shadow: 0 10px 20px rgba(0,0,0,.06),0 6px 6px rgba(0,0,0,.1);
@@ -553,6 +555,11 @@
 	z-index: 1;
 	
 }
+
+.uix-page-builder-gridster-widget > div {
+	padding: 40px 15px 0;
+}
+
 
 .uix-page-builder-gridster-widget.active {
 	
@@ -594,7 +601,7 @@
 
 
 #uix-page-builder-gridster-wrapper.visualBuilder .uix-page-builder-gridster-widget .title-box {
-	width: 100px;
+	width: 85px;
 	font-size: 12px;
 	text-indent: 3px;
 }
@@ -621,7 +628,6 @@
 	position: absolute;
 	right: 40px;
 	top: -1px;
-	margin-top: -30px;
 	z-index: 22;
 
 }
@@ -759,26 +765,16 @@
 	height: 30px;
 	width: 100%;
 	position: absolute;
-	top: -30px;
+	top: -1px;
 	left: -1px;
 	cursor: move;
 	border: 1px solid #E1E1E1;
 	padding: 0 1px;
 	-webkit-box-shadow: 0px 3px 3px 0px rgba(230,230,230,1);
 	-moz-box-shadow: 0px 3px 3px 0px rgba(230,230,230,1);
-	box-shadow: 0px 3px 3px 0px rgba(230,230,230,1);	
+	box-shadow: 0px 3px 3px 0px rgba(230,230,230,1);
 }
 
-.uix-page-builder-gridster-drag .dashicons-sort {
-	position: absolute;
-	top: 5px;
-	font-size: 20px;
-	right: 80px;
-	color: #999999;
-	z-index: -1;
-	border-right: 1px dotted #DADADA;
-	padding-right: 10px;
-}
 
 .uix-page-builder-gridster-drag:hover {
 	filter: alpha(opacity=80);  
@@ -804,7 +800,6 @@
 	cursor: pointer;
 	display: block;
 	background: none;
-	margin-top: -30px;
 	
 }
 
@@ -812,9 +807,6 @@
 	color: #DF2629 !important;
 }
 
-.edit-gridster-widget {
-	display: none;
-}
 
 /* Gridster Data */
 #uix-page-builder-layoutdata {
@@ -891,7 +883,7 @@
 	border: none;
 	outline: none;
 	background: #0085BA;
-	padding: 3px;
+	padding: 1px 7px;
 	color: #fff;
 	cursor: pointer;
 	-webkit-border-radius: 3px; 
@@ -900,7 +892,7 @@
 	padding-right: 7px;
 	font-weight: normal;
 	text-decoration: none;
-	margin: 7px;
+	margin: 4px 5px 0;
 	font-size: 11px !important;
 }
 
@@ -933,11 +925,11 @@
 	position: relative;
 	display: block;
 	float: left;
-	height: 40px;
+	height: 30px;
 	background: #FFE7E7;
-	border: 3px dotted #F79EA0;
+	border: 2px dotted #F79EA0;
 	margin-right: 10px;
-	margin-bottom: 13px;
+	margin-bottom: 7px;
 	cursor: move;
 	
 }
@@ -955,8 +947,11 @@
 
 
 .sortable-list .row .add-elements-btn {
-	margin: 7px;
+	margin: 4px 5px 0;
 	font-size: 11px !important;
+	padding: 1px 7px;
+	line-height: 1.4;
+	height: 22px;
 }
 
 .sortable-list .row.used {
@@ -1015,7 +1010,8 @@
 	width: 400px;
 	height: 50px;
 	position: relative;
-	z-index: 21;	
+	z-index: 21;
+	margin-top: 10px;
 }
 
 #uix-page-builder-gridster-wrapper.visualBuilder .widget-items-col-container {
