--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -18,6 +18,13 @@
 	width: 100vw;
 }
 
+#uix-page-builder-themepreview.res {
+	-webkit-box-shadow: 0 0 0 1px #dee0e3;
+	-moz-box-shadow: 0 0 0 1px #dee0e3;
+	box-shadow: 0 0 0 1px #dee0e3;
+}
+
+
 
 .uix-page-builder-themepreview-btn {
 	-webkit-box-shadow: 0px 2px 23px 1px rgba(0,0,0,0.24);
@@ -196,6 +203,84 @@
         transform: rotate(360deg);
     }
 }
+
+
+/* Responsive Switching Preview
+-------------------------------------------------------------- */
+ul.uix-page-builder-res-selector {
+	position: fixed;
+	left: 0;
+	bottom: 0;
+	z-index: 3;
+	width: 315px;
+	height: 32px;
+	margin: 0;
+	background: #F1F1F1;
+}
+
+ul.uix-page-builder-res-selector.active {
+	filter: alpha(opacity=35);
+	-moz-opacity: 0.35;   
+	opacity: 0.35;
+	-webkit-box-shadow: 0px 1px 9px 0px rgba(0,0,0,0.31);
+	-moz-box-shadow: 0px 1px 9px 0px rgba(0,0,0,0.31);
+	box-shadow: 0px 1px 9px 0px rgba(0,0,0,0.31);
+	top: 51px;
+	bottom: auto;
+	width: 300px;
+
+}
+
+ul.uix-page-builder-res-selector.active li {
+	padding: 0 18.5px;
+}
+
+ul.uix-page-builder-res-selector.active:hover {
+	filter: alpha(opacity=100);
+	-moz-opacity: 1;   
+	opacity: 1; 	
+}
+
+
+ul.uix-page-builder-res-selector li {
+    position: relative;
+    display: block;
+    float: left;
+    overflow: hidden;
+	height: 32px;
+	width: 36px;
+	padding: 0 20px;
+    cursor: pointer;
+    -moz-transition: all 0.2s ease-in-out;
+    -webkit-transition: all 0.2s ease-in-out;
+    -ms-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+	text-align: center;
+	-webkit-box-shadow: inset -1px 0px 0px 0px rgba(0,0,0,0.09);
+	-moz-box-shadow: inset -1px 0px 0px 0px rgba(0,0,0,0.09);
+	box-shadow: inset -1px 0px 0px 0px rgba(0,0,0,0.09);
+}
+
+ul.uix-page-builder-res-selector li:last-child {
+	-webkit-box-shadow: none;
+	-moz-box-shadow: none;
+	box-shadow: none;
+}
+
+
+
+ul.uix-page-builder-res-selector li .dashicons {
+	font-size: 16px;
+	margin-top: 8px;
+}
+
+
+ul.uix-page-builder-res-selector li:hover,
+ul.uix-page-builder-res-selector li.active {
+	color: #2C7EAE;
+}
+
+
 
 /* Elements Navigation
 -------------------------------------------------------------- */
